--- a/view-files/edit.ejs
+++ b/view-files/edit.ejs
@@ -8,6 +8,6 @@
     <form class="mb-3" method="POST" action="/update">
         <input type="text" name="task" class="form-control" required value="<%= data.todo %>"/>
         <input type="text" name="id" value="<%= data.id%>" hidden>
-        <input type="submit" value="Edit Task" class="btn btn-primary mt-2" />
+        <input type="submit" value="Edit " class="btn btn-primary mt-2" />
     </form>
 </div>
